@@ -1,4 +1,6 @@
 DIST freeipa-1.2.1.tar.gz 534879 RMD160 1d64a27ab7cac9886acc2308cc34ae3baf040457 SHA1 73563220907ce716db808b3f9bf591a47f13b5ec SHA256 463bf57ea82e068e53dc3a6076594ab36f8ca8fe8eadd40964b4cd0026b0d1d0
+DIST freeipa-1.2.2.tar.gz 528651 RMD160 aadd3121f8ef986f14a588632ac35c2ed9273955 SHA1 85e0c65db5a9b1591dce83cd9a04dde54281686d SHA256 d3721e27069d16ae96715e40fdf8c6ca85d2b793884817061267db511e2d0749
 EBUILD ipa-admintools-1.2.1.ebuild 619 RMD160 e2eab8df7e68de041177efdfe95cfb9496876ec8 SHA1 f2077c2ce2006adce0c9a0b69dd0330b0c0d4a37 SHA256 3cd4ed39ce670d211e10bf16636e110ba76a0d2cb673a71e9f53fc9432a6d1c8
-MISC ChangeLog 262 RMD160 57cd68928bf76b83ce6839f6f3e180f74e3f956a SHA1 2cb8c1c034b816953ffcce3838e4a5ea90f2d5d9 SHA256 a9ef7cd9b8cf6570265ede26f013cfac103c589a57d7dde6832d1657d8652bf9
+EBUILD ipa-admintools-1.2.2.ebuild 617 RMD160 f53c86d780da697c093ed6142da4f3f6a4f555e7 SHA1 abf189ded75e801a849d0eb08f9e225196e0e9f2 SHA256 e725131361d6cc2a6d5d10c931371e6199dae26ba7f601d2af24e57c461be6ed
+MISC ChangeLog 363 RMD160 a588dd9571d81763d16261b9cbeb201a34a86108 SHA1 7b520016b9500f768a9dab92ac40fd5906934764 SHA256 cb97ff1dc4bf68dc576d47729fba65c20a5dd4f932d6b9581a076cad8861947b
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
