@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +ipa-admintools-1.2.2.ebuild:
+  version bump
+
   31 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +ipa-admintools-1.2.1.ebuild, +metadata.xml:
   initial commit hard masked ebuild
